--- a/src/example.html
+++ b/src/example.html
@@ -176,7 +176,7 @@
                 { title: 'Deny', icon: 'assets/bomb-icon.svg', onclick: () => console.log("denied") },
                 { title: 'More', icon: 'assets/more-icon.svg',
                     children: [
-                        { title: 'No idea', onclick: () => console.log("clicked on an item which has no idea") },
+                        { title: 'No idea', shortcut: 'Ctrl+V', onclick: () => console.log("clicked on an item which has no idea") },
                         { title: 'Still no idea', onclick: () => console.log("just for the example :)") }
                     ]
                 },
