--- a/src/example.html
+++ b/src/example.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Demo for ContextMenu.js</title>
 
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css" integrity="sha512-iBBXm8fW90+nuLcSKlbmrPcLa0OT92xO1BIsZ+ywDWZCvqsWgccV3gFoRBv0z+8dLJgyAHIhR35VZc2oM/gI1w==" crossorigin="anonymous" />
     <link rel="stylesheet" href="contextmenu.css">
 
     <style>
@@ -172,16 +173,16 @@
         button.addEventListener('contextmenu', function (e) {
             e.preventDefault(); // this avoids the default behavior of the browser
             let contextMenu = new ContextMenu(e, [
-                { title: 'Accept', shortcut: 'Ctrl+C', icon: 'assets/check-icon.svg', onclick: () => console.log("accepted") },
-                { title: 'Deny', icon: 'assets/bomb-icon.svg', onclick: () => console.log("denied") },
-                { title: 'More', icon: 'assets/more-icon.svg',
+                { title: 'Accept', shortcut: 'Ctrl+C', fontawesome_icon: "fas fa-check", onclick: () => console.log("accepted") },
+                { title: 'Deny', fontawesome_icon: "fas fa-bomb", onclick: () => console.log("denied") },
+                { title: 'More', fontawesome_icon: 'fas fa-plus',
                     children: [
                         { title: 'No idea', shortcut: 'Ctrl+V', onclick: () => console.log("clicked on an item which has no idea") },
                         { title: 'Still no idea', onclick: () => console.log("just for the example :)") }
                     ]
                 },
                 { separator: true },
-                { title: 'Cancel', icon: 'assets/power-off-icon.svg', onclick: () => console.log("cancelled") }
+                { title: 'Cancel', fontawesome_icon: 'fas fa-power-off', onclick: () => console.log("cancelled") }
             ]);
         });
     </script>
