feat(): add fontawesome_color & improve doc

--- a/src/example.html
+++ b/src/example.html
@@ -182,7 +182,7 @@
                     ]
                 },
                 { separator: true },
-                { title: 'Cancel', fontawesome_icon: 'fas fa-power-off', onclick: () => console.log("cancelled") }
+                { title: 'Cancel', fontawesome_icon: 'fas fa-power-off', fontawesome_color: '#c00', onclick: () => console.log("cancelled") }
             ]);
         });
     </script>
